# ChangeLog for x11-drivers/xf86-video-nouveau
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Feb 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> xf86-video-nouveau-0.0.20090130.ebuild,
  xf86-video-nouveau-9999.ebuild:
  drop dri USE-flag

  04 Feb 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> xf86-video-nouveau-9999.ebuild:
  bump required drm version, fix xorg-server dependency

  30 Jan 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> xf86-video-nouveau-0.0.20090130.ebuild:
  adjust dri for xorg-server-1.5.3, drop dri configure option

  30 Jan 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -xf86-video-nouveau-0.0.20090121.ebuild,
  +xf86-video-nouveau-0.0.20090130.ebuild:
  new snapshot

  22 Jan 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -xf86-video-nouveau-0.0.20090119.ebuild,
  +xf86-video-nouveau-0.0.20090121.ebuild:
  new snapshot

  19 Jan 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -xf86-video-nouveau-0.0.20090111.ebuild,
  +xf86-video-nouveau-0.0.20090119.ebuild:
  new snapshot

  12 Jan 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -xf86-video-nouveau-0.0.20090104.ebuild,
  +xf86-video-nouveau-0.0.20090111.ebuild:
  new snapshot

  05 Jan 2009; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> +xf86-video-nouveau-0.0.20090104.ebuild,
  +xf86-video-nouveau-9999.ebuild, +metadata.xml:
  new ebuilds for bug 253705
