@@ -1,4 +1,4 @@
 EBUILD xf86-video-nouveau-0.0.20090130.ebuild 1037 RMD160 392bbcc3b222d3ed1296ccca8b755019f6aa1c4f SHA1 344e3ba2a8094aa983a08b87d49426f2179c3671 SHA256 1a870284697bc4937ba07a05f12bdfa8c56388766b578cce296d721bba24c0bf
-EBUILD xf86-video-nouveau-9999.ebuild 1090 RMD160 3e3a97bd81686c5df4777a90abfc2bb762df4f3c SHA1 536177d303cc2c577302beba892d0efbb74704ee SHA256 1b11286d74a8ba8c29b3677f3772e0ed4fc37ae589bbaafeecea823eb911d8df
-MISC ChangeLog 1611 RMD160 28e4fac8ab29835c585150d34b7ecb1742467c1b SHA1 b5a0e10f9e05b2fb3bff9102dfa3d029ae5d7414 SHA256 db56c26e16fa8490a3de28db63f5d6a3e57e04d4f7afb277ba29609d1ed56442
+EBUILD xf86-video-nouveau-9999.ebuild 1086 RMD160 ca67217efefb70287715cc62e9e0dfd37a6cde2e SHA1 d925b39056cd2843a866d14e516175153ef8cb3b SHA256 02f2a2a82d6cf99e4b3c2323807095c2075a3a01b3b1d30941a7e752ff255d63
+MISC ChangeLog 1752 RMD160 1da65ec3da06b131adcacdc0a10e30cdc5902be1 SHA1 1c81df170afdcf9f3cf5605d647b3d33f026df22 SHA256 f646ac821fb8b7713ab1ae941fe147cff6eb2fb1c18f55dc9240dc0940dfacf1
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
